--- a/ssi/section-green-buildings.html
+++ b/ssi/section-green-buildings.html
@@ -3,7 +3,7 @@
         <h2 class="text-center"><span style="color:#4DFF0F;">Greening</span> California's Government Systainable State Buildings</h2>
         <p class="lead text-center">The most recent data shows a double-digit percent deduction since 2003</p>
 
-        <div class="carousel carousel-media">
+        <div class="owl-carousel carousel-media">
             <div class="item">
                 <div class="stats-highlight" data-direction="left" data-percentfill="50" data-colorfill="#72CE6F">
                   <img src="sample/images/charts/home_page_fallback.png" alt="Fallback Example" />
