Added a note about additional bootstrap components and classes at the end of the examples page.

--- a/sample/index.html
+++ b/sample/index.html
@@ -56,114 +56,126 @@
 
   <div id="main-content" class="main-content">
     <div class="section">
-      <main class="main-primary">
-        <h1>Examples</h1>
-        <p>The following pages include example modules as well as documentation that describe the usage of each module. On any given page you will find a working example of the module, A description of the various classes used in the creation of the module,
-          as well as the source code that you can copy and past from should you need to. The following pages help to serve as a styleguide as well as documentation.</p>
+        <main class="main-primary">
+            <h1>Examples</h1>
+            <p>
+                The following pages include example modules as well as documentation that describe the usage of each module. On any given page you will find a working example of the module, A description of the various classes used in the creation of the module,
+                as well as the source code that you can copy and past from should you need to. The following pages help to serve as a styleguide as well as documentation.
+            </p>
 
-        <h2>Page Layout</h2>
-        <ul class="list-primary">
-          <li><a href="page-templates.html">Page Templates</a></li>
-          <li><a href="featured-search.html">Featured Search</a></li>
-          <li><a href="fixed-header.html">Fixed Header</a></li>
-          <li><a href="grid.html">Grid System </a></li>
-          <li><a href="breadcrumb.html">Breadcrumb</a></li>
-        </ul>
+            <h2>Page Layout</h2>
+            <ul class="list-primary">
+                <li><a href="page-templates.html">Page Templates</a></li>
+                <li><a href="featured-search.html">Featured Search</a></li>
+                <li><a href="fixed-header.html">Fixed Header</a></li>
+                <li><a href="grid.html">Grid System </a></li>
+                <li><a href="breadcrumb.html">Breadcrumb</a></li>
+            </ul>
 
-        <h2>Additional Example Pages</h2>
-        <ul class="list-primary">
-          <li><a href="/general-landing.html">Generic Landing Page</a></li>
-          <li><a href="/search-directory.html">Search Directory Page</a></li>
-          <li><a href="/business-profile.html">Business Profile Page</a></li>
-          <li><a href="/profile-landing.html">Profile Landing Page</a></li>
-        </ul>
+            <h2>Additional Example Pages</h2>
+            <ul class="list-primary">
+                <li><a href="/general-landing.html">Generic Landing Page</a></li>
+                <li><a href="/search-directory.html">Search Directory Page</a></li>
+                <li><a href="/business-profile.html">Business Profile Page</a></li>
+                <li><a href="/profile-landing.html">Profile Landing Page</a></li>
+            </ul>
 
-        <h2>Navigation Samples</h2>
-          <ul class="list-primary">
-              <li><a href="navigation-megamenu.html">Megamenu Navigation</a></li>
-              <li><a href="navigation-megamenu-original.html">State Template v4 Original Megamenu</a></li>
-              <li><a href="navigation-single.html">Single Level Navigation</a></li>
-              <li><a href="navigation-dropdown.html">Dropdown Navigation</a></li>
-              <li><a href="navigation-active.html">Setting the Active Navigation Item</a></li>
-              <li><a href="navigation-mobile-controls.html">Mobile Navigation Icon Links</a></li>
-          </ul>
+            <h2>Navigation Samples</h2>
+            <ul class="list-primary">
+                <li><a href="navigation-megamenu.html">Megamenu Navigation</a></li>
+                <li><a href="navigation-megamenu-original.html">State Template v4 Original Megamenu</a></li>
+                <li><a href="navigation-single.html">Single Level Navigation</a></li>
+                <li><a href="navigation-dropdown.html">Dropdown Navigation</a></li>
+                <li><a href="navigation-active.html">Setting the Active Navigation Item</a></li>
+                <li><a href="navigation-mobile-controls.html">Mobile Navigation Icon Links</a></li>
+            </ul>
 
-        <h2>Color Schemes</h2>
-          <ul class="list-primary">
-              <li><a href="colorscheme-oceanside.html">Oceanside</a>
-              <li><a href="colorscheme-orangecounty.html">Orange County</a></li>
-              <li><a href="colorscheme-pasorobles.html">Paso Robles</a></li>
-              <li><a href="colorscheme-santabarbara.html">Santa Barbara</a></li>
-              <li><a href="colorscheme-sierra.html">Sierra</a></li>
-              <li><a href="colorscheme-mono.html">Mono</a></li>
-              <li><a href="colorscheme-trinity.html">Trinity</a></li>
-              <li><a href="colorscheme-eureka.html">Eureka</a></li>
-              <li><a href="colorscheme-sacramento.html">Sacramento</a></li>
-          </ul>
+            <h2>Color Schemes</h2>
+            <ul class="list-primary">
+                <li><a href="colorscheme-oceanside.html">Oceanside</a>
+                <li><a href="colorscheme-orangecounty.html">Orange County</a></li>
+                <li><a href="colorscheme-pasorobles.html">Paso Robles</a></li>
+                <li><a href="colorscheme-santabarbara.html">Santa Barbara</a></li>
+                <li><a href="colorscheme-sierra.html">Sierra</a></li>
+                <li><a href="colorscheme-mono.html">Mono</a></li>
+                <li><a href="colorscheme-trinity.html">Trinity</a></li>
+                <li><a href="colorscheme-eureka.html">Eureka</a></li>
+                <li><a href="colorscheme-sacramento.html">Sacramento</a></li>
+            </ul>
 
-        <h2>Content Modules</h2>
-          <ul class="list-primary">
-              <li><a href="contact-widgets.html">Contact Widgets</a> (Supports Microdata)</li>
-              <li><a href="course-list.html">Course List</a> (Supports Microdata)</li>
-              <li><a href="course-detail.html">Course Detail</a> (Supports Microdata)</li>
-              <li><a href="course-detail-panel.html">Course Detail (Panel)</a> (Supports Microdata)</li>
-              <li><a href="event-list.html">Event List</a> (Supports Microdata)</li>
-              <li><a href="event-detail.html">Event Detail</a> (Supports Microdata)</li>
-              <li><a href="exam-list.html">Exam List</a></li>
-              <li><a href="figure.html">Figure with Captions</a> (Supports Microdata)</li>
-              <li><a href="headers.html">Headers and Paragraphs</a></li>
-              <li><a href="hero-info.html">Hero Info</a></li>
-              <li><a href="icon-blocks.html">Icon Blocks</a></li>
-              <li><a href="job-list.html">Job List</a> (Supports Microdata)</li>
-              <li><a href="job-detail.html">Job Detail</a> (Supports Microdata)</li>
-              <li><a href="lists.html">Lists (Bulleted &amp; Expanding)</a></li>
-              <li><a href="location-widgets.html">Location (Widgets)</a> (Supports Microdata)</li>
-              <li><a href="location-full.html">Location (Full)</a> (Supports Microdata)</li>
-              <li><a href="news-list.html">News List</a> (Supports Microdata)</li>
-              <li><a href="news-detail.html">News Detail</a> (Supports Microdata)</li>
-              <li><a href="profile-banners.html">Profile Banners</a> (Supports Microdata)</li>
-              <li><a href="profile-list.html">Public Profile List</a> (Supports Microdata)</li>
-              <li><a href="profile-detail.html">Public Profile Detail</a> (Supports Microdata)</li>
-              <li><a href="publications.html">Publications</a> (Supports Microdata)</li>
-          </ul>
+            <h2>Content Modules</h2>
+            <ul class="list-primary">
+                <li><a href="contact-widgets.html">Contact Widgets</a> (Supports Microdata)</li>
+                <li><a href="course-list.html">Course List</a> (Supports Microdata)</li>
+                <li><a href="course-detail.html">Course Detail</a> (Supports Microdata)</li>
+                <li><a href="course-detail-panel.html">Course Detail (Panel)</a> (Supports Microdata)</li>
+                <li><a href="event-list.html">Event List</a> (Supports Microdata)</li>
+                <li><a href="event-detail.html">Event Detail</a> (Supports Microdata)</li>
+                <li><a href="exam-list.html">Exam List</a></li>
+                <li><a href="figure.html">Figure with Captions</a> (Supports Microdata)</li>
+                <li><a href="headers.html">Headers and Paragraphs</a></li>
+                <li><a href="hero-info.html">Hero Info</a></li>
+                <li><a href="icon-blocks.html">Icon Blocks</a></li>
+                <li><a href="job-list.html">Job List</a> (Supports Microdata)</li>
+                <li><a href="job-detail.html">Job Detail</a> (Supports Microdata)</li>
+                <li><a href="lists.html">Lists (Bulleted &amp; Expanding)</a></li>
+                <li><a href="location-widgets.html">Location (Widgets)</a> (Supports Microdata)</li>
+                <li><a href="location-full.html">Location (Full)</a> (Supports Microdata)</li>
+                <li><a href="news-list.html">News List</a> (Supports Microdata)</li>
+                <li><a href="news-detail.html">News Detail</a> (Supports Microdata)</li>
+                <li><a href="profile-banners.html">Profile Banners</a> (Supports Microdata)</li>
+                <li><a href="profile-list.html">Public Profile List</a> (Supports Microdata)</li>
+                <li><a href="profile-detail.html">Public Profile Detail</a> (Supports Microdata)</li>
+                <li><a href="publications.html">Publications</a> (Supports Microdata)</li>
+            </ul>
 
-        <h2>Components &amp; Utility Content</h2>
-          <ul class="list-primary">
-              <li><a href="accordions.html">Accordions</a></li>
-              <li><a href="animations.html">Animations</a></li>
-              <li><a href="alert-banner.html">Alert Banner</a></li>
-              <li><a href="blockquotes.html">Blockquotes</a></li>
-              <li><a href="buttons.html">Buttons</a></li>
-              <li><a href="cards.html">Cards</a></li>
-              <li><a href="carousels.html">Carousels and Slideshows</a></li>
-              <li><a href="charts.html">Charts</a></li>
-              <li><a href="featured-narrative.html">Featured Narrative</a></li>
-              <li><a href="form.html">Form Styles</a></li>
-              <li><a href="gallery.html">Gallery</a></li>
-              <li><a href="horizontal-rules.html">Horizontal Rules</a></li>
-              <li><a href="icon-fonts.html">Icon Font Library</a></li>
-              <li><a href="media-object.html">Media Object</a></li>
-              <li><a href="number-counter.html">Number Counter</a></li>
-              <li><a href="panels.html">Panels</a></li>
-              <li><a href="panels-photo.html">Panels with Photos</a></li>
-              <li><a href="progress-bars.html">Progress Bars</a></li>
-              <li><a href="sections.html">Sections</a></li>
-              <li><a href="service-group.html">Service Tiles</a></li>
-              <li><a href="socialsharer.html">SocialSharer</a></li>
-              <li><a href="spacing.html">Spacing</a></li>
-              <li><a href="tabs.html">Tabs</a></li>
-              <li><a href="tables.html">Tables</a></li>
-              <li><a href="testimonials.html">Testimonials</a></li>
-              <li><a href="text-accent.html">Text Accent Colors</a></li>
-              <li><a href="toggle.html">Toggle</a></li>
-              <li><a href="typography.html">Typography</a></li>
-          </ul>
-       <h2>Dreamweaver Templates</h2>
-          <ul class="list-primary">
-              <li><a href="dreamweaver-templates.html">Using Dreamweaver Templates</a></li>
-          </ul> 
-
-      </main>
+            <h2>Components &amp; Utility Content</h2>
+            <ul class="list-primary">
+                <li><a href="accordions.html">Accordions</a></li>
+                <li><a href="animations.html">Animations</a></li>
+                <li><a href="alert-banner.html">Alert Banner</a></li>
+                <li><a href="blockquotes.html">Blockquotes</a></li>
+                <li><a href="buttons.html">Buttons</a></li>
+                <li><a href="cards.html">Cards</a></li>
+                <li><a href="carousels.html">Carousels and Slideshows</a></li>
+                <li><a href="charts.html">Charts</a></li>
+                <li><a href="featured-narrative.html">Featured Narrative</a></li>
+                <li><a href="form.html">Form Styles</a></li>
+                <li><a href="gallery.html">Gallery</a></li>
+                <li><a href="horizontal-rules.html">Horizontal Rules</a></li>
+                <li><a href="icon-fonts.html">Icon Font Library</a></li>
+                <li><a href="media-object.html">Media Object</a></li>
+                <li><a href="number-counter.html">Number Counter</a></li>
+                <li><a href="panels.html">Panels</a></li>
+                <li><a href="panels-photo.html">Panels with Photos</a></li>
+                <li><a href="progress-bars.html">Progress Bars</a></li>
+                <li><a href="sections.html">Sections</a></li>
+                <li><a href="service-group.html">Service Tiles</a></li>
+                <li><a href="socialsharer.html">SocialSharer</a></li>
+                <li><a href="spacing.html">Spacing</a></li>
+                <li><a href="tabs.html">Tabs</a></li>
+                <li><a href="tables.html">Tables</a></li>
+                <li><a href="testimonials.html">Testimonials</a></li>
+                <li><a href="text-accent.html">Text Accent Colors</a></li>
+                <li><a href="toggle.html">Toggle</a></li>
+                <li><a href="typography.html">Typography</a></li>
+            </ul>
+            <h2>Dreamweaver Templates</h2>
+            <ul class="list-primary">
+                <li><a href="dreamweaver-templates.html">Using Dreamweaver Templates</a></li>
+            </ul>
+            <h2>Additional Bootstrap CSS & Components</h2>
+            <p>
+                We strongly recommend using the documented State Template Content Modules and Components
+                whenever possible; however, for more CSS classes and options as well as components we suggest
+                utilizing what is available in Bootstrap first, before developing your own custom code.
+            </p>
+            <p>
+                <span class="label label-primary">NOTE:</span> When using custom components and content
+                modules that are not documented as part of the State Template, migration to future versions
+                of the State Template may require additional work.
+            </p>
+        </main>
 
       <div class="main-secondary">
         <!--#include virtual="/sample/modules/profile-banners.html" -->
