- Updated responsive tabs. Made it CSS solution (deleted responsive tabls  third party plugin) - Updated logo image styles. Logo image can be any size now but it will adjust to the nav container keeping its aspect ratio. Now it’s working in all browsers. Added version (v5.5.0)number to the Template logo. - Added State Tempalte version numbert (v5.5.0)  in pages headers.

--- a/sample/modules/tabs.html
+++ b/sample/modules/tabs.html
@@ -1,14 +1,14 @@
 <div class="tab-group">
     <span class="ca-gov-icon-favorite"></span>
     <!-- Nav tabs - NOTE: UNIQUE ID IS REQUIRED -->
-    <ul id="homeTabs" class="nav nav-tabs responsive" role="tablist">
+    <ul id="homeTabs" class="nav nav-tabs" role="tablist">
         <li class="nav-item active" role="tab"><a href="#home" data-toggle="tab" class="nav-link">Home</a></li>
         <li class="nav-item" role="tab"><a href="#profile" data-toggle="tab" class="nav-link">Profile</a></li>
         <li class="nav-item" role="tab"><a href="#messages" data-toggle="tab" class="nav-link">Messages</a></li>
         <li class="nav-item" role="tab"><a href="#settings" data-toggle="tab" class="nav-link">Settings</a></li>
     </ul>
     <!-- Tab panes -->
-    <div class="tab-content responsive">
+    <div class="tab-content">
         <div class="tab-pane active" id="home" role="tabpanel">Home Tab</div>
         <div class="tab-pane" id="profile" role="tabpanel">Profile Tab</div>
         <div class="tab-pane" id="messages" role="tabpanel">Messages Tab</div>
