--- a/sample/modules/tabs-bottom.html
+++ b/sample/modules/tabs-bottom.html
@@ -1,14 +1,14 @@
 <div class="tab-group tabs-bottom">
     <span class="ca-gov-icon-favorite"></span>
     <!-- Nav tabs - NOTE: UNIQUE ID IS REQUIRED -->
-    <ul id="homeTabsBottom" class="nav nav-tabs responsive" role="tablist">
+    <ul id="homeTabsBottom" class="nav nav-tabs" role="tablist">
         <li class="active nav-item" role="tab"><a href="#homeB" data-toggle="tab">Home</a></li>
         <li role="tab" class="nav-item"><a href="#profileB" data-toggle="tab">Profile</a></li>
         <li role="tab" class="nav-item"><a href="#messagesB" data-toggle="tab">Messages</a></li>
         <li role="tab" class="nav-item"><a href="#settingsB" data-toggle="tab">Settings</a></li>
     </ul>
     <!-- Tab panes -->
-    <div class="tab-content responsive">
+    <div class="tab-content">
         <div class="tab-pane active" id="homeB">Home Tab</div>
         <div class="tab-pane" id="profileB">Profile Tab</div>
         <div class="tab-pane" id="messagesB">Messages Tab</div>
