--- a/sample/tabs.html
+++ b/sample/tabs.html
@@ -1,15 +1,14 @@
-﻿﻿<!doctype html>
+﻿<!doctype html>
 <!--[if lt IE 7]> <html class="no-js ie6 oldie" lang="en"> <![endif]-->
 <!--[if IE 7]>    <html class="no-js ie7 oldie" lang="en"> <![endif]-->
 <!--[if IE 8]>    <html class="no-js ie8 oldie" lang="en"> <![endif]-->
 <!--[if IE 9]>    <html class="no-js ie9 oldie" lang="en"> <![endif]-->
 <!--[if (gt IE 9)]><!-->
 <html class="no-js" lang="en">
- <!--<![endif]-->
+<!--<![endif]-->
 <head>
-    <!--
-    California State Template
-    Version 5.5.0
+    <!--        California State Template
+            Version 5.5.0
 
     Based on Twitter Bootstrap
     -->
