Replaced google analytics ID with some placeholder ID.

--- a/ssi/head-css-js.html
+++ b/ssi/head-css-js.html
@@ -83,4 +83,4 @@ Select a color scheme:
 <![endif]-->
 
 <!-- Include Google Analytics -->
-<!-- virtual="/ssi/analytics.html" -->
+<!--#include virtual="/ssi/analytics.html" -->
