--- a/ssi/analytics.html
+++ b/ssi/analytics.html
@@ -1,7 +1,7 @@
 <script type="text/javascript">
 
   var _gaq = _gaq || [];
-  _gaq.push(['_setAccount', 'UA-3419582-14']); // Step 4: your google analytics profile code, either from your own google account, or contact eServices to have one set up for you
+  _gaq.push(['_setAccount', 'UA-XXXXXXX-XX']); // Step 4: your google analytics profile code, either from your own google account, or contact eServices to have one set up for you
   _gaq.push(['_gat._anonymizeIp']);
   _gaq.push(['_setDomainName', '.ca.gov']);
   _gaq.push(['_trackPageview']);
