Added new full width nav menu with Icons sample page. Updated template logo

--- a/sample/index.html
+++ b/sample/index.html
@@ -6,8 +6,9 @@
 <!--[if (gt IE 9)]><!--><html class="no-js" lang="en"><!--<![endif]-->
 
 <head>
-    <!--        California State Template
-        Version 5.5.0
+    <!--
+        California State Template
+        Version 5.0
         
         Based on Twitter Bootstrap
     -->
@@ -85,7 +86,8 @@
                 <li><a href="navigation-megamenu.html">Megamenu Navigation</a></li>
                 <li><a href="navigation-megamenu-original.html">State Template v4 Original Megamenu</a></li>
                 <li><a href="navigation-single.html">Single Level Navigation</a></li>
-                <li><a href="navigation-full-width.html">Full Width Navigation</a></li>
+                <li><a href="navigation-full-width-icons.html">Full Width Navigation with Icons</a></li>
+                <li><a href="navigation-full-width.html">Full Width Navigation without Icons</a></li>
                 <li><a href="navigation-dropdown.html">Dropdown Navigation</a></li>
                 <li><a href="navigation-active.html">Setting the Active Navigation Item</a></li>
                 <li><a href="navigation-mobile-controls.html">Mobile Navigation Icon Links</a></li>
