--- a/Getting-started.html
+++ b/Getting-started.html
@@ -10,7 +10,7 @@
 <head>
     <!--
     California State Template
-    Version 5.5.0
+    Version 4.0
 
     Based on Twitter Bootstrap
     -->
@@ -71,7 +71,7 @@
                 <p>The following page includes examples of applying California State Template css, js and ssi files to a web page. Here are the steps you need to quickly set you your site with California State Template.</p>
                 <h2>Contents</h2>
                 <p>To get started you need to download Californis State Template from <a href="https://github.com/Office-of-Digital-Innovation/California-State-Template-v5" target="_blank">HitGub</a>. Once downloaded, unzip the compressed folder and you’ll see something like this:</p>
-                <div class="col-6">
+                <div class="col-9">
                     <pre><code class="language-plaintext" data-lang="plaintext">StateTemplate/
 ├── css/
 │   ├── cagov.core.css
@@ -99,11 +99,11 @@
 
                 <h2>CSS</h2>
                 <p>Copy-paste the stylesheet links into your <code class="highlighter-rouge">&lt;head&gt;</code> before all other stylesheets to load our CSS.</p>
-<pre><code class="language-html" data-lang="html">
+                <pre>
 <span class="text-accent-p2">&lt;link</span> <span class="text-info">href=</span><span class="text-accent7">'https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700'</span> <span class="text-info">rel=</span><span class="text-accent7">'stylesheet'</span> <span class="text-info">type=</span><span class="text-accent7">'text/css'</span><span class="text-accent-p2">&gt;</span>
 <span class="text-accent-p2">&lt;link</span> <span class="text-info">rel=</span><span class="text-accent7">"stylesheet"</span> <span class="text-info">href=</span><span class="text-accent7">"/css/cagov.core.css"</span><span class="text-accent-p2">&gt;</span>
 <span class="text-accent-p2">&lt;link</span> <span class="text-info">rel=</span><span class="text-accent7">"stylesheet"</span> <span class="text-info">href=</span><span class="text-accent7">"/css/colorscheme-oceanside.css"</span><span class="text-accent-p2">&gt;</span><br />
-</code></pre>
+</pre>
                 <p><code>colorscheme-oceanside.css</code> can be replaced with a color scheme file of your choice.</p>
 
                 <h2>JS</h2>
@@ -112,21 +112,21 @@
                     <code>&lt;script&gt;</code>s in the <code>&lt;head&gt;</code> section right after stylesheet links.
                 </p>
 
-<pre><code class="language-html" data-lang="html">
+<pre>
 <span class="text-accent-p2">&lt;script</span> <span class="text-info">src=</span><span class="text-accent7">"/js/libs/modernizr-2.0.6.min.js"</span><span class="text-accent-p2">&gt;&lt;/script&gt;</span>
 <span class="text-accent-p2">&lt;script</span> <span class="text-info">src=</span><span class="text-accent7">"/js/libs/modernizr-extra.min.js"</span><span class="text-accent-p2">&gt;&lt;/script&gt;</span>
 <span class="text-accent-p2">&lt;script</span> <span class="text-info">src=</span><span class="text-accent7">"https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"</span> <span class="text-info">type=</span><span class="text-accent7">"text/javascript"</span><span class="text-accent-p2">&gt;&lt;/script&gt;</span>
 <span class="text-accent-p2">&lt;script</span> <span class="text-info">src=</span><span class="text-accent7">"https://code.jquery.com/jquery-migrate-3.0.1.min.js"</span><span class="text-accent-p2">&gt;&lt;/script&gt;</span><br />
-</code></pre>
+</pre>
                 <p>
                     Finally, place the rest of js reffernces near the end of your pages, right before the closing
                     <code>&lt;/body&gt;</code> tag
                 </p>
                 <div class="row">
                     <div class="col-6">
-<pre><code class="language-html" data-lang="html">
+<pre>
 <span class="text-accent-p2">&lt;script</span> <span class="text-info">src=</span><span class="text-accent7">"/js/cagov.core.js"</span><span class="text-accent-p2">&gt;&lt;/script&gt;</span><br />
-</code></pre>
+</pre>
                     </div>
                 </div>
                 <h2>Clean Starter Template</h2>
@@ -137,7 +137,8 @@
                 </p>
 
 
-<pre><code class="language-html" data-lang="html"><span class="text-success">&lt;!doctype html&gt;</span>
+<pre>
+&lt;!doctype html&gt;</span>
 <span class="text-accent-p2">&lt;html</span> <span class="text-info">lang=</span><span class="text-accent7">"en"</span><span class="text-accent-p2">&gt;</span>
     <span class="text-accent-p2">&lt;head&gt;</span>
         <span class="text-muted">&lt;!-- Required meta tags --&gt;</span>
@@ -163,7 +164,7 @@
         <span class="text-muted">&lt;!-- State Template JavaScript --&gt;</span>
         <span class="text-accent-p2">&lt;script </span><span class="text-info">src=</span><span class="text-accent7">"/js/cagov.core.js"</span> <span class="text-accent-p2">&gt;&lt;/script&gt;</span>
     <span class="text-accent-p2">&lt;/body&gt;</span>
-<span class="text-accent-p2">&lt;/html&gt;</span></code></pre>
+<span class="text-accent-p2">&lt;/html&gt;</span></pre>
 
                 <p><span class="label label-info">Note:</span> Template above does not include any State Template content, modules or server side includes.</p>
 
@@ -172,7 +173,6 @@
                 Several common components (such as page headers, footers, navigation, etc.) are included in pages using Server Side Includes (SSI). 
                  Here is code example using SSI in California State Template web page:</p>
 <pre>
-                <code>
 <span class="text-success">&lt;!doctype html&gt;</span>
 <span class="text-accent-p2">&lt;html</span> <span class="text-info">lang=</span><span class="text-accent7">"en"</span><span class="text-accent-p2">&gt;</span>
      <span class="text-accent-p2">&lt;head&gt;</span>
@@ -210,7 +210,6 @@
             <span class="text-success">&lt;!--#include virtual="/ssi/scripts.html" --&gt;</span>
     <span class="text-accent-p2">&lt;/body&gt;</span>
 <span class="text-accent-p2">&lt;/html&gt;</span>
-</code>
 </pre>
 <p><span class="label label-info">Note:</span> The web server that hosts the State Template should be configured to process SSI's with the .html extension.</p>
 
