Adjusted active search container rgba opacity

--- a/serp.html
+++ b/serp.html
@@ -5,8 +5,9 @@
 <!--[if IE 9]>    <html class="no-js ie9 oldie" lang="en"> <![endif]-->
 <!--[if (gt IE 9)]><!--> <html class="no-js" lang="en"> <!--<![endif]-->
 <head>
-<!--        California State Template
-        Version 5.5.0
+<!-- 
+California State Template
+Version 5.5.0
  
 Based on Twitter Bootstrap
 -->
@@ -74,7 +75,7 @@ Based on Twitter Bootstrap
         <main class="main-primary">
             <!--Search result section-->
             <div class="section section-default">
-                <div class="container search-results-header">
+                <div class="container search-results-header p-r-lg">
                     <h1>Search Results</h1>
                     <gcse:searchbox-only resultsUrl="/serp.html" enableAutoComplete="true"></gcse:searchbox-only>
 
