Added flex sub menu - fixed nav mobile icons page - Added correct bootstrap 4 breakpoints to navigation - Fixed business profile page - Removed number counter circles code from cagov.core.js file. Instead, added it to the local files

--- a/sample/index.html
+++ b/sample/index.html
@@ -83,8 +83,9 @@
 
             <h2>Navigation Samples</h2>
             <ul class="list-primary">
-                <li><a href="navigation-megamenu.html">Megamenu Navigation</a></li>
-                <li><a href="navigation-megamenu-original.html">State Template v4 Original Megamenu</a></li>
+                <li><a href="navigation-megamenu-flex.html">Flex Megamenu Navigation</a></li>
+                <li><a href="navigation-megamenu.html">State Template v5 Megamenu</a></li>
+                <li><a href="navigation-megamenu-original.html">State Template v4 Megamenu</a></li>
                 <li><a href="navigation-single.html">Single Level Navigation</a></li>
                 <li><a href="navigation-full-width-icons.html">Full Width Navigation with Icons</a></li>
                 <li><a href="navigation-full-width.html">Full Width Navigation without Icons</a></li>
