--- a/sample/modules/nav-dropdown.html
+++ b/sample/modules/nav-dropdown.html
@@ -62,7 +62,7 @@
             
                         </li>
                     </ul>
-
+                </div>
 
         <!-- LEFT ALIGNED IMAGE -->
         <li class="nav-item">
