--- a/sample/navigation-full-width.html
+++ b/sample/navigation-full-width.html
@@ -7,8 +7,9 @@
 
 
 <head>
-<!--        California State Template
-        Version 5.5.0
+<!-- 
+California State Template
+Version 5.0
  
 Based on Twitter Bootstrap
 -->
@@ -76,10 +77,13 @@ Based on Twitter Bootstrap
 
             <h2>More Navigation Samples</h2>
             <ul>
-                <li><a href="navigation-megamenu.html">Megamenu Navigation</a></li>
-                <li><a href="navigation-megamenu-original.html">State Template v4 Original Megamenu</a></li>
-                <li><a href="navigation-dropdown.html">Dropdown Navigation</a></li>
+                <li><a href="navigation-full-width-ic.html">Full Width Navigation with Icons</a></li>
                 <li><a href="navigation-single.html">Single Level Navigation</a></li>
+                <li><a href="navigation-megamenu-flex.html">State Template v5.5 Flex Megamenu</a></li>
+                <li><a href="navigation-megamenu.html">State Template v5 Megamenu</a></li>
+                <li><a href="navigation-megamenu-original.html">State Template v4 Megamenu</a></li>
+                <li><a href="navigation-dropdown.html">Dropdown Navigation</a></li>
+
             </ul>
 
         </main>
