--- a/sample/modules/mobile-controls-sample.html
+++ b/sample/modules/mobile-controls-sample.html
@@ -1,6 +1,12 @@
 <!-- mobile navigation controls -->
 <div class="mobile-controls">
-    <span class="mobile-control toggle-menu float-right"><span class="ca-gov-icon-menu" aria-hidden="true"></span><span class="sr-only">Menu</span></span>
+    <button id="nav-icon3" class="mobile-control toggle-menu float-right" aria-expanded="false" aria-controls="navigation">
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        <span class="sr-only">Menu</span>
+    </button>
     <span class="mobile-control-group mobile-header-icons">
         <!-- Add mobile control here. THis will be on the right side of the mobile page header section -->
     	<span class="mobile-control contact-link"><span class="ca-gov-icon-chat" aria-hidden="true"></span><span class="sr-only">Contact</span></span>    
