--- a/sample/number-counter.html
+++ b/sample/number-counter.html
@@ -29,14 +29,14 @@ Based on Twitter Bootstrap
 <body>
 
   <header role="banner" id="header" class="global-header">
-    <div id="skip-to-content"><a href="#main-content">Skip to Main Content</a></div>    
-        <!-- Location Bar -->        
+    <div id="skip-to-content"><a href="#main-content">Skip to Main Content</a></div>
+        <!-- Location Bar -->
 		<!--#include virtual="/ssi/location-bar.html" -->
-        
+
         <!-- Include Utility Header -->
-		<!--#include virtual="/ssi/utility-header.html" -->	
-        
-        <!-- Settings Bar -->	
+		<!--#include virtual="/ssi/utility-header.html" -->
+
+        <!-- Settings Bar -->
 		<!--#include virtual="/ssi/settings-bar.html" -->
 
 		<!-- Include Branding -->
@@ -103,8 +103,83 @@ Based on Twitter Bootstrap
                             <button type="button" class="close" data-dismiss="modal">&times;</button>
                         </div>
                         <div class="modal-body">
-                            <label for="sample-counter-circles">Source Code:</label>
-                            <pre><code class="overflow-auto"><!--#include virtual="/sample/modules/number-counter-circles.html" --></code></pre>
+
+                            <div class="tab-group">
+                                <ul id="sourceCode" class="nav nav-tabs" role="tablist">
+                                    <li class="active"><a href="#html" role="tab" data-toggle="tab">HTML Markup</a></li>
+                                    <li><a href="#js" role="tab" data-toggle="tab">JavaScript</a></li>
+                                </ul>
+                                <!-- Tab panes -->
+                                <div class="tab-content responsive">
+                                    <div class="tab-pane active" id="html">
+                                        <pre><code class="overflow-auto"><!--#include virtual="/sample/modules/number-counter-circles.html" --></code></pre>
+                                    </div>
+                                    <div class="tab-pane" id="js">
+                                        <pre><code class="overflow-auto">createCircles();
+
+
+function createCircles() {
+    //isolate this circles code out of fuction if you want circles animation to start right away
+    var myCircle1 = Circles.create({
+        id: 'circle1', radius: 80,
+        radius: 80,
+        value: 87,
+        maxValue: 100,
+        width: 8,
+        text: function (value) { return value + '%'; },
+        colors: ['#363636', '#72c02c'],
+        duration: 2000,
+        wrpClass: 'circles-wrp',
+        textClass: 'circles-text',
+        valueStrokeClass: 'circles-valueStroke',
+        maxValueStrokeClass: 'circles-maxValueStroke',
+        styleWrapper: true,
+        styleText: true
+    });
+
+    var myCircle2 = Circles.create({
+        id: 'circle2', radius: 80,
+        radius: 80,
+        value: 74,
+        maxValue: 100,
+        width: 8,
+        text: function (value) { return value + '%'; },
+        colors: ['#363636', '#e81c62'],
+        duration: 2000,
+        wrpClass: 'circles-wrp',
+        textClass: 'circles-text',
+        valueStrokeClass: 'circles-valueStroke',
+        maxValueStrokeClass: 'circles-maxValueStroke',
+        styleWrapper: true,
+        styleText: true
+    });
+
+    var myCircle3 = Circles.create({
+        id: 'circle3', radius: 80,
+        radius: 80,
+        value: 65,
+        maxValue: 100,
+        width: 8,
+        text: function (value) { return value + '%'; },
+        colors: ['#363636', '#00bed6'],
+        duration: 2000,
+        wrpClass: 'circles-wrp',
+        textClass: 'circles-text',
+        valueStrokeClass: 'circles-valueStroke',
+        maxValueStrokeClass: 'circles-maxValueStroke',
+        styleWrapper: true,
+        styleText: true
+    });
+    // End circles
+}
+
+</code></pre>
+                                    </div>
+                                </div>
+                            </div>
+
+
+
                         </div>
                         <div class="modal-footer">
                             <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -120,6 +195,68 @@ Based on Twitter Bootstrap
   <!--#include virtual="/ssi/global-footer.html" -->
 
   <!--#include virtual="/ssi/scripts.html" -->
+
+
+    <script>
+
+createCircles();
+
+
+function createCircles() {
+    //isolate this circles code out of fuction if you want circles animation to start right away
+    var myCircle1 = Circles.create({
+        id: 'circle1', radius: 80,
+        radius: 80,
+        value: 87,
+        maxValue: 100,
+        width: 8,
+        text: function (value) { return value + '%'; },
+        colors: ['#363636', '#72c02c'],
+        duration: 2000,
+        wrpClass: 'circles-wrp',
+        textClass: 'circles-text',
+        valueStrokeClass: 'circles-valueStroke',
+        maxValueStrokeClass: 'circles-maxValueStroke',
+        styleWrapper: true,
+        styleText: true
+    });
+
+    var myCircle2 = Circles.create({
+        id: 'circle2', radius: 80,
+        radius: 80,
+        value: 74,
+        maxValue: 100,
+        width: 8,
+        text: function (value) { return value + '%'; },
+        colors: ['#363636', '#e81c62'],
+        duration: 2000,
+        wrpClass: 'circles-wrp',
+        textClass: 'circles-text',
+        valueStrokeClass: 'circles-valueStroke',
+        maxValueStrokeClass: 'circles-maxValueStroke',
+        styleWrapper: true,
+        styleText: true
+    });
+
+    var myCircle3 = Circles.create({
+        id: 'circle3', radius: 80,
+        radius: 80,
+        value: 65,
+        maxValue: 100,
+        width: 8,
+        text: function (value) { return value + '%'; },
+        colors: ['#363636', '#00bed6'],
+        duration: 2000,
+        wrpClass: 'circles-wrp',
+        textClass: 'circles-text',
+        valueStrokeClass: 'circles-valueStroke',
+        maxValueStrokeClass: 'circles-maxValueStroke',
+        styleWrapper: true,
+        styleText: true
+    });
+    // End circles
+}
+    </script>
 
 </body>
 
