--- a/ssi/navigation.html
+++ b/ssi/navigation.html
@@ -13,59 +13,42 @@ Options are: megadropdown dropdown singlelevel
         <li class="nav-item">
             <a href="/sample/" class="first-level-link"><span class="ca-gov-icon-gears"></span>Examples</a>
             <div class="sub-nav">
-                <div class="half">
-                    <ul class="second-level-nav">
-                        <li class="unit1">
-                            <a href="/" class="second-level-link"><span class="ca-gov-icon-home" aria-hidden="true"></span>Link 1</a>
-                        </li>
-                        <li class="unit1">
-                            <a href="/" class="second-level-link"><span class="ca-gov-icon-home" aria-hidden="true"></span>Link 2</a>
-                        </li>
-                        <li class="unit2">
-                            <a href="/" class="second-level-link">
-                                <span class="ca-gov-icon-home" aria-hidden="true"></span>Link 3
-                                <div class="link-description">Lorem ipsum dolor sit amet consectetur adipisicing</div>
-                            </a>
-                        </li>
-                        <li class="unit1">
-                            <a href="/" class="second-level-link"><span class="ca-gov-icon-home" aria-hidden="true"></span>Link 4</a>
-                        </li>
-                        <li class="unit2">
-                            <a href="/" class="second-level-link">
-                                <span class="ca-gov-icon-home" aria-hidden="true"></span>Link 5
-                                <div class="link-description">Lorem ipsum dolor sit amet consectetur adipisicing</div>
-                            </a>
-                        </li>
-                        <li class="unit1">
-                            <a href="/" class="second-level-link"><span class="ca-gov-icon-home" aria-hidden="true"></span>Link 6</a>
-                        </li>
-                    </ul>
+                <div class="second-level-nav flex">
+                    <a href="/" class="second-level-link">
+                        <span class="ca-gov-icon-home font-size-40" aria-hidden="true"></span>
+                        <p class="h3 sub-nav-link">First Link</p>
+                        <p class="link-description">Lorem ipsum dolor sit amet consectetur adipisicing</p>
+                    </a>
+
+                    <a href="/" class="second-level-link">
+                        <span class="ca-gov-icon-apps font-size-40" aria-hidden="true"></span>
+                        <p class="h3 sub-nav-link">Second Link</p>
+                        <p class="link-description">Lorem ipsum dolor sit amet consectetur adipisicing</p>
+                    </a>
+
+                    <a href="/" class="second-level-link">
+                        <span class="ca-gov-icon-chat font-size-40" aria-hidden="true"></span>
+                        <p class="h3 sub-nav-link">Third Link</p>
+                        <p class="link-description">Lorem ipsum dolor sit amet consectetur adipisicing</p>
+                    </a>
                 </div>
-
-                <div class="half">
-                    <div class="nav-media">
-                        <div class="media unit2">
-                            <div class="media-left">
-                                <a href="#"><img class="media-object" src="/sample/images/70x70.gif" alt="..."></a>
-                            </div>
-                            <div class="media-body">
-                                <div class="title"><a href="">Public profile</a></div>
-                                <div class="teaser">Cras justo odio, dapibus ac facilisis in, egestas eget quam.</div>
-                                <a href="" class="btn btn-default btn-sm float-right">Read More</a>
-                            </div>
-                        </div>
-
-                        <div class="media unit2">
-                            <div class="media-left">
-                                <a href="#"><img class="media-object" src="/sample/images/70x70.gif" alt="..."></a>
-                            </div>
-                            <div class="media-body">
-                                <div class="title"><a href="">News Title</a></div>
-                                <div class="teaser">Cras justo odio, dapibus ac facilisis in, egestas eget quam.</div>
-                                <a href="" class="btn btn-default btn-sm float-right">Read More</a>
-                            </div>
-                        </div>
-                    </div>
+                <div class="second-level-nav flex with-border">
+                    <a href="/" class="second-level-link">
+                        <span class="ca-gov-icon-home" aria-hidden="true"></span>Link 1
+                        <div class="link-description">Lorem ipsum dolor sit amet consectetur adipisicing</div>
+                    </a>
+                    <a href="/" class="second-level-link">
+                        <span class="ca-gov-icon-home" aria-hidden="true"></span>Link 2
+                        <div class="link-description">Lorem ipsum dolor sit amet consectetur adipisicing</div>
+                    </a>
+                    <a href="/" class="second-level-link">
+                        <span class="ca-gov-icon-home" aria-hidden="true"></span>Link 3
+                        <div class="link-description">Lorem ipsum dolor sit amet consectetur adipisicing</div>
+                    </a>
+                    <a href="/" class="second-level-link">
+                        <span class="ca-gov-icon-home" aria-hidden="true"></span>Link 4
+                        <div class="link-description">Lorem ipsum dolor sit amet consectetur adipisicing</div>
+                    </a>
                 </div>
             </div>
         </li>
@@ -73,76 +56,95 @@ Options are: megadropdown dropdown singlelevel
         <li class="nav-item">
             <a href="/about.html" class="first-level-link"><span class="ca-gov-icon-info-bubble" aria-hidden="true"></span>About</a>
             <div class="sub-nav">
-                <div class="half offset-half">
-                    <ul class="second-level-nav">
-                        <li class="unit1">
-                            <a href="/" class="second-level-link"><span class="ca-gov-icon-home" aria-hidden="true"></span>Link 1</a>
-                        </li>
-                        <li class="unit1">
-                            <a href="/" class="second-level-link"><span class="ca-gov-icon-home" aria-hidden="true"></span>Link 2</a>
-                        </li>
-                        <li class="unit2">
-                            <a href="/" class="second-level-link">
-                                <span class="ca-gov-icon-home" aria-hidden="true"></span>Link 3
-                                <div class="link-description">Lorem ipsum dolor sit amet consectetur adipisicing</div>
-                            </a>
-                        </li>
-                        <li class="unit1">
-                            <a href="/" class="second-level-link"><span class="ca-gov-icon-home" aria-hidden="true"></span>Link 4</a>
-                        </li>
-                        <li class="unit2">
-                            <a href="/" class="second-level-link">
-                                <span class="ca-gov-icon-home" aria-hidden="true"></span>Link 5
-                                <div class="link-description">Lorem ipsum dolor sit amet consectetur adipisicing</div>
-                            </a>
-                        </li>
-                        <li class="unit1">
-                            <a href="/" class="second-level-link"><span class="ca-gov-icon-home" aria-hidden="true"></span>Link 6</a>
-                        </li>
-                    </ul>
+                <div class="second-level-nav flex">
+                    <a href="/" class="second-level-link">
+                        <img class="image-icon rounded-50x m-b-md" src="/sample/images/01.png" alt="Image Description">
+                        <p class="h3 sub-nav-link">First Link</p>
+                        <p class="link-description">Lorem ipsum dolor sit amet consectetur adipisicing</p>
+                    </a>
+                    <a href="/" class="second-level-link">
+                        <img class="image-icon rounded-50x m-b-md" src="/sample/images/02.png" alt="Image Description">
+                        <p class="h3 sub-nav-link">Second Link</p>
+                        <p class="link-description">Lorem ipsum dolor sit amet consectetur adipisicing</p>
+                    </a>
+                    <a href="/" class="second-level-link">
+                        <img class="image-icon rounded-50x m-b-md" src="/sample/images/03.png" alt="Image Description">
+                        <p class="h3 sub-nav-link">Third Link</p>
+                        <p class="link-description">Lorem ipsum dolor sit amet consectetur adipisicing</p>
+                    </a>
                 </div>
-
-                <div class="half with-image-left">
-                    <div class="nav-media" style="background:url('/sample/images/sample-nav-image2.jpg')"></div>
+                <div class="second-level-nav flex with-border">
+                    <a href="/" class="second-level-link">
+                        <span class="ca-gov-icon-home" aria-hidden="true"></span>Link 1
+                        <div class="link-description">Lorem ipsum dolor sit amet consectetur adipisicing</div>
+                    </a>
+                    <a href="/" class="second-level-link">
+                        <span class="ca-gov-icon-home" aria-hidden="true"></span>Link 2
+                        <div class="link-description">Lorem ipsum dolor sit amet consectetur adipisicing</div>
+                    </a>
+                    <a href="/" class="second-level-link">
+                        <span class="ca-gov-icon-home" aria-hidden="true"></span>Link 3
+                        <div class="link-description">Lorem ipsum dolor sit amet consectetur adipisicing</div>
+                    </a>
+                    <a href="/" class="second-level-link">
+                        <span class="ca-gov-icon-home" aria-hidden="true"></span>Link 4
+                        <div class="link-description">Lorem ipsum dolor sit amet consectetur adipisicing</div>
+                    </a>
+                    <a href="/" class="second-level-link">
+                        <span class="ca-gov-icon-home" aria-hidden="true"></span>Link 5
+                        <div class="link-description">Lorem ipsum dolor sit amet consectetur adipisicing</div>
+                    </a>
                 </div>
             </div>
         </li>
 
-        <!-- LEFT ALIGNED IMAGE -->
+
         <li class="nav-item">
             <a href="/getting-started.html" class="first-level-link"><span class="ca-gov-icon-gear" aria-hidden="true"></span>Getting Started</a>
             <div class="sub-nav">
-                <!-- Offset class needed to fix positioning issue caused when positioning the image -->
-                <div class="three-quarters offset-quarter">
-                    <ul class="second-level-nav">
-                        <li class="unit1">
-                            <a href="/" class="second-level-link"><span class="ca-gov-icon-home" aria-hidden="true"></span>Link 1</a>
-                        </li>
-                        <li class="unit1">
-                            <a href="/" class="second-level-link"><span class="ca-gov-icon-home" aria-hidden="true"></span>Link 2</a>
-                        </li>
-                        <li class="unit2">
-                            <a href="/" class="second-level-link">
-                                <span class="ca-gov-icon-home" aria-hidden="true"></span>Link 3
-                                <div class="link-description">Lorem ipsum dolor sit amet consectetur adipisicing</div>
-                            </a>
-                        </li>
-                        <li class="unit1">
-                            <a href="/" class="second-level-link"><span class="ca-gov-icon-home" aria-hidden="true"></span>Link 4</a>
-                        </li>
-                        <li class="unit2">
-                            <a href="/" class="second-level-link">
-                                <span class="ca-gov-icon-home" aria-hidden="true"></span>Link 5
-                                <div class="link-description">Lorem ipsum dolor sit amet consectetur adipisicing</div>
-                            </a>
-                        </li>
-                        <li class="unit1">
-                            <a href="/" class="second-level-link"><span class="ca-gov-icon-home" aria-hidden="true"></span>Link 6</a>
-                        </li>
-                    </ul>
+                <div class="second-level-nav flex with-border">
+                    <a href="/" class="second-level-link">
+                        <div class="media-left">
+                            <img class="media-object" src="/sample/images/70x70.gif" alt="...">
+                        </div>
+                        <div class="media-body">
+                            <div class="title text-left">News Title</div>
+                            <div class="teaser link-description text-left">Cras justo odio, dapibus ac facilisis in, egestas eget quam.</div>
+                        </div>
+                    </a>
+
+                    <a href="/" class="second-level-link">
+                        <div class="media-left">
+                            <img class="media-object" src="/sample/images/70x70.gif" alt="...">
+                        </div>
+                        <div class="media-body">
+                            <div class="title text-left">News Title</div>
+                            <div class="teaser link-description text-left">Cras justo odio, dapibus ac facilisis in, egestas eget quam.</div>
+                        </div>
+                    </a>
+
                 </div>
-                <div class="quarter with-image-left">
-                    <div class="nav-media" style="background:url('/sample/images/sample-nav-image2.jpg')"></div>
+                <div class="second-level-nav flex">
+                    <a href="/" class="second-level-link">
+                        <span class="ca-gov-icon-home font-size-40" aria-hidden="true"></span>
+                        <p class="h3 sub-nav-link">First Link</p>
+                        <p class="link-description">Lorem ipsum dolor sit amet consectetur adipisicing</p>
+                    </a>
+                    <a href="/" class="second-level-link">
+                        <span class="ca-gov-icon-apps font-size-40" aria-hidden="true"></span>
+                        <p class="h3 sub-nav-link">Second Link</p>
+                        <p class="link-description">Lorem ipsum dolor sit amet consectetur adipisicing</p>
+                    </a>
+                    <a href="/" class="second-level-link">
+                        <span class="ca-gov-icon-chat font-size-40" aria-hidden="true"></span>
+                        <p class="h3 sub-nav-link">Third Link</p>
+                        <p class="link-description">Lorem ipsum dolor sit amet consectetur adipisicing</p>
+                    </a>
+                    <a href="/" class="second-level-link">
+                        <span class="ca-gov-icon-gear font-size-40" aria-hidden="true"></span>
+                        <p class="h3 sub-nav-link">Forth Link</p>
+                        <p class="link-description">Lorem ipsum dolor sit amet consectetur adipisicing</p>
+                    </a>
                 </div>
             </div>
         </li>
