--- a/ssi/utility-header.html
+++ b/ssi/utility-header.html
@@ -4,7 +4,7 @@
             <div class="half">
                  
                 <ul class="utility-links social-media-links">
-                    <li><div class="header-cagov-logo"><a href="/"><img src="/images/Ca-Gov-Logo-Gold.svg" alt="CA.gov" /></a></div></li>
+                    <li><div class="header-cagov-logo"><a href="https://ca.gov"><img src="/images/Ca-Gov-Logo-Gold.svg" alt="CA.gov" /></a></div></li>
                     <li><a href="/"><span class="ca-gov-icon-home" aria-hidden="true"></span><span class="sr-only">Home</span></a></li>
                     <li><a href="/" class="ca-gov-icon-facebook" title="Share via Facebook"><span class="sr-only">Facebook</span></a></li>
                     <li><a href="/" class="ca-gov-icon-twitter" title="Share via Twitter"><span class="sr-only">Twitter</span></a></li>        
