Added "social" class to social ucons list to remove underline.

--- a/general-landing.html
+++ b/general-landing.html
@@ -242,7 +242,7 @@ Based on Twitter Bootstrap
                                                         <a href="" class="btn btn-secondary btn-block btn-sm">Contact Agency</a>
                                                         <a href="" class="btn btn-secondary btn-block btn-sm">Show on Map</a>
                                                         <a href="" class="btn btn-secondary btn-block btn-sm">Live Chat</a>
-                                                        <ul class="list-inline list-unstyled">
+                                                        <ul class="list-inline list-unstyled social">
                                                             <li class="list-inline-item"><a href=""><span class="ca-gov-icon-share-twitter" aria-hidden="true"><span class="sr-only">Twitter</span></span></a></li>
                                                             <li class="list-inline-item"><a href=""><span class="ca-gov-icon-share-facebook" aria-hidden="true"><span class="sr-only">Facebook</span></span></a></li>
                                                             <li class="list-inline-item"><a href=""><span class="ca-gov-icon-share-googleplus" aria-hidden="true"><span class="sr-only">Google+</span></span></a></li>
@@ -287,7 +287,7 @@ Based on Twitter Bootstrap
                                                         <a href="" class="btn btn-secondary btn-block btn-sm">Contact Agency</a>
                                                         <a href="" class="btn btn-secondary btn-block btn-sm">Show on Map</a>
                                                         <a href="" class="btn btn-secondary btn-block btn-sm">Live Chat</a>
-                                                        <ul class="list-inline list-unstyled">
+                                                        <ul class="list-inline list-unstyled social">
                                                             <li><a href=""><span class="ca-gov-icon-share-twitter" aria-hidden="true"><span class="sr-only">Twitter</span></span></a></li>
                                                             <li><a href=""><span class="ca-gov-icon-share-facebook" aria-hidden="true"><span class="sr-only">Facebook</span></span></a></li>
                                                             <li><a href=""><span class="ca-gov-icon-share-googleplus" aria-hidden="true"><span class="sr-only">Google+</span></span></a></li>
@@ -334,7 +334,7 @@ Based on Twitter Bootstrap
                                                         <a href="" class="btn btn-secondary btn-block btn-sm">Contact Agency</a>
                                                         <a href="" class="btn btn-secondary btn-block btn-sm">Show on Map</a>
                                                         <a href="" class="btn btn-secondary btn-block btn-sm">Live Chat</a>
-                                                        <ul class="list-inline list-unstyled">
+                                                        <ul class="list-inline list-unstyled social">
                                                             <li><a href=""><span class="ca-gov-icon-share-twitter" aria-hidden="true"><span class="sr-only">Twitter</span></span></a></li>
                                                             <li><a href=""><span class="ca-gov-icon-share-facebook" aria-hidden="true"><span class="sr-only">Facebook</span></span></a></li>
                                                             <li><a href=""><span class="ca-gov-icon-share-googleplus" aria-hidden="true"><span class="sr-only">Google+</span></span></a></li>
@@ -379,7 +379,7 @@ Based on Twitter Bootstrap
                                                         <a href="" class="btn btn-secondary btn-block btn-sm">Contact Agency</a>
                                                         <a href="" class="btn btn-secondary btn-block btn-sm">Show on Map</a>
                                                         <a href="" class="btn btn-secondary btn-block btn-sm">Live Chat</a>
-                                                        <ul class="list-inline list-unstyled">
+                                                        <ul class="list-inline list-unstyled social">
                                                             <li><a href=""><span class="ca-gov-icon-share-twitter" aria-hidden="true"><span class="sr-only">Twitter</span></span></a></li>
                                                             <li><a href=""><span class="ca-gov-icon-share-facebook" aria-hidden="true"><span class="sr-only">Facebook</span></span></a></li>
                                                             <li><a href=""><span class="ca-gov-icon-share-googleplus" aria-hidden="true"><span class="sr-only">Google+</span></span></a></li>
