Added .social class to social icons listing on  service profile page

--- a/sample/colorscheme-trinity.html
+++ b/sample/colorscheme-trinity.html
@@ -71,7 +71,7 @@
     </script>
 
 
-    <!-- For iPad 3 nothing-->
+    <!-- For iPad 3-->
     <link rel="apple-touch-icon" sizes="144x144" href="/images/template2014/apple-touch-icon-144x144.png">
     <!-- For iPhone 4 -->
     <link rel="apple-touch-icon" sizes="114x114" href="/images/template2014/apple-touch-icon-114x114.png">
