--- a/service-profile.html
+++ b/service-profile.html
@@ -99,7 +99,7 @@ Based on Twitter Bootstrap
                                 <a href="" class="btn btn-primary btn-xs">Name Change</a>
                             </div> 
                             
-                            <ul class="list-inline list-unstyled m-t-md">
+                            <ul class="list-inline list-unstyled m-t-md social">
                                 <li><a href=""><span class="ca-gov-icon-twitter" aria-hidden="true"><span class="sr-only">Twitter</span></span></a></li>
                                 <li><a href=""><span class="ca-gov-icon-facebook" aria-hidden="true"><span class="sr-only">Facebook</span></span></a></li>
                                 <li><a href=""><span class="ca-gov-icon-google-plus" aria-hidden="true"><span class="sr-only">Google+</span></span></a></li>
