Added slideshow banner to the carousels sample page. Adjusted slideshow banner nav buttons position.

--- a/sample/carousels.html
+++ b/sample/carousels.html
@@ -85,14 +85,14 @@ Based on Twitter Bootstrap
                         <p>To create a content fit, we use a background-image on the outermost element of our item. One could of course not set the background-image and the carousel item will still fit the content,  but you will have to be aware of issues between the carousel container's background color and your content.</p>
 <pre><code>
 <div class="item" style="background-image: url('/url/to/image');">
-    <div class="content-container">
-        <div class="content">
+                        <div class="content-container">
+                        <div class="content">
             <! -- your content -->
         </div>
     </div>
 </div>
 </code></pre>
-                        
+
                         <!--#include virtual="/sample/modules/carousel-content.html" -->
                     </div>
                     <div class="third">
@@ -111,6 +111,8 @@ Based on Twitter Bootstrap
 <pre><code>
                         <div class="item">
                         <img src="/sample/images/gallery/sierra-big.jpg" alt="background" />
+
+
 
                         <div class="content-container">
                         <div class="content">
@@ -138,7 +140,15 @@ Based on Twitter Bootstrap
 
 
 
+                <div class="group">
+                    <h2>Slideshow Banner</h2>
+                    <!--#include virtual="/sample/modules/slideshow-banner.html" -->
+                </div>
+                <h2><label for="sample-carousel-video">Source Code:</label></h2>
+                <textarea id="sample-4" class="form-control" rows="10" cols="80"><!--#include virtual="/sample/modules/slideshow-banner.html" --></textarea>
 
+
+                <hr />
 
 
 
