Added cdn link in getting started page.

--- a/Getting-started.html
+++ b/Getting-started.html
@@ -125,6 +125,9 @@ Version 5.5.2
 </pre>
                     </div>
                 </div>
+                <p><span class="label label-info">Note:</span> Load your website faster by using <a href="/cdn.html">State Template CDN</a></p>
+                
+                
                 <h2>Clean Starter Template</h2>
                 <p>
                     Be sure to have your pages set up with the latest design and development standards.
