Moved modernizr custom build js code into cagov core js file - Removed unused modernizr libraries from the libs folder - Updated template code previews in GettingStarted and CDN pages

--- a/Getting-started.html
+++ b/Getting-started.html
@@ -99,8 +99,7 @@ Version 5.5.2
                 <pre>
 <span class="text-accent-p2">&lt;link</span> <span class="text-info">href=</span><span class="text-accent7">'https://fonts.googleapis.com/css?family=Asap+Condensed:400,600|Source+Sans+Pro:400,700'</span> <span class="text-info">rel=</span><span class="text-accent7">'stylesheet'</span> <span class="text-info">type=</span><span class="text-accent7">'text/css'</span><span class="text-accent-p2">&gt;</span>
 <span class="text-accent-p2">&lt;link</span> <span class="text-info">rel=</span><span class="text-accent7">"stylesheet"</span> <span class="text-info">href=</span><span class="text-accent7">"/css/cagov.core.css"</span><span class="text-accent-p2">&gt;</span>
-<span class="text-accent-p2">&lt;link</span> <span class="text-info">rel=</span><span class="text-accent7">"stylesheet"</span> <span class="text-info">href=</span><span class="text-accent7">"/css/colorscheme-oceanside.css"</span><span class="text-accent-p2">&gt;</span><br />
-</pre>
+<span class="text-accent-p2">&lt;link</span> <span class="text-info">rel=</span><span class="text-accent7">"stylesheet"</span> <span class="text-info">href=</span><span class="text-accent7">"/css/colorscheme-oceanside.css"</span><span class="text-accent-p2">&gt;</span></pre>
                 <p><code>colorscheme-oceanside.css</code> can be replaced with a color scheme file of your choice.</p>
 
                 <h2>JS</h2>
@@ -110,10 +109,8 @@ Version 5.5.2
                 </p>
 
 <pre>
-<span class="text-accent-p2">&lt;script</span> <span class="text-info">src=</span><span class="text-accent7">"/js/libs/modernizr-3.6.0.min.js"</span><span class="text-accent-p2">&gt;&lt;/script&gt;</span>
 <span class="text-accent-p2">&lt;script</span> <span class="text-info">src=</span><span class="text-accent7">"https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"</span> <span class="text-info">type=</span><span class="text-accent7">"text/javascript"</span><span class="text-accent-p2">&gt;&lt;/script&gt;</span>
-<span class="text-accent-p2">&lt;script</span> <span class="text-info">src=</span><span class="text-accent7">"https://code.jquery.com/jquery-migrate-3.0.1.min.js"</span><span class="text-accent-p2">&gt;&lt;/script&gt;</span><br />
-</pre>
+<span class="text-accent-p2">&lt;script</span> <span class="text-info">src=</span><span class="text-accent7">"https://code.jquery.com/jquery-migrate-3.0.1.min.js"</span><span class="text-accent-p2">&gt;&lt;/script&gt;</span></pre>
                 <p>
                     Finally, place the rest of js reffernces near the end of your pages, right before the closing
                     <code>&lt;/body&gt;</code> tag
@@ -121,8 +118,7 @@ Version 5.5.2
                 <div class="row">
                     <div class="col-6">
 <pre>
-<span class="text-accent-p2">&lt;script</span> <span class="text-info">src=</span><span class="text-accent7">"/js/cagov.core.js"</span><span class="text-accent-p2">&gt;&lt;/script&gt;</span><br />
-</pre>
+<span class="text-accent-p2">&lt;script</span> <span class="text-info">src=</span><span class="text-accent7">"/js/cagov.core.js"</span><span class="text-accent-p2">&gt;&lt;/script&gt;</span></pre>
                     </div>
                 </div>
                 <p><span class="label label-info">Note:</span> Load your website faster by using <a href="/cdn.html">State Template CDN</a></p>
@@ -152,7 +148,6 @@ Version 5.5.2
         
         <span class="text-accent-p2">&lt;title&gt;</span>California State Webpage<span class="text-accent-p2">&lt;/title&gt;</span>
         <span class="text-muted">&lt;!-- Required JS --&gt;</span>
-        <span class="text-accent-p2">&lt;script </span><span class="text-info">src=</span><span class="text-accent7">"/js/libs/modernizr-3.6.0.min.js"</span><span class="text-accent-p2">&gt;&lt;/script&gt;</span>
         <span class="text-accent-p2">&lt;script </span><span class="text-info">src=</span><span class="text-accent7">"https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"</span> <span class="text-info">type=</span><span class="text-accent7">"text/javascript"</span><span class="text-accent-p2">&gt;&lt;/script&gt;</span>
         <span class="text-accent-p2">&lt;script </span><span class="text-info">src=</span><span class="text-accent7">"https://code.jquery.com/jquery-migrate-3.0.1.min.js"</span> <span class="text-info">type=</span><span class="text-accent7">"text/javascript"</span><span class="text-accent-p2">&gt;&lt;/script&gt;</span>
     <span class="text-accent-p2">&lt;/head&gt;</span>
