--- a/cdn.html
+++ b/cdn.html
@@ -75,8 +75,7 @@ Version 5.5.2
 <span class="text-accent-p2">&lt;link</span> <span class="text-info">href=</span><span class="text-accent7">"https://california.azureedge.net/cdt/statetemplate/5.5.2/css/colorscheme-oceanside.css"</span> <span class="text-info">rel=</span><span class="text-accent7">"stylesheet"</span><span class="text-accent-p2">&gt;</span><br /></pre>
 
                 <h2>CDN example using JS files</h2>
-                <pre><span class="text-accent-p2">&lt;script</span> <span class="text-info">src=</span><span class="text-accent7">"https://california.azureedge.net/cdt/statetemplate/5.5.2/js/libs/modernizr-3.6.0.min.js"</span><span class="text-accent-p2">&gt;&lt;/script&gt;</span>
-<span class="text-accent-p2">&lt;script</span> <span class="text-info">src=</span><span class="text-accent7">"https://california.azureedge.net/cdt/statetemplate/5.5.2/js/cagov.core.js"</span><span class="text-accent-p2">&gt;&lt;/script&gt;</span></pre>
+                <pre><span class="text-accent-p2">&lt;script</span> <span class="text-info">src=</span><span class="text-accent7">"https://california.azureedge.net/cdt/statetemplate/5.5.2/js/cagov.core.js"</span><span class="text-accent-p2">&gt;&lt;/script&gt;</span></pre>
 
 
                 <h2>Sample page using State Template CDN</h2>
@@ -100,7 +99,6 @@ Version 5.5.2
         <span class="text-accent-p2">&lt;link</span> <span class="text-info">rel=</span><span class="text-accent7">"stylesheet"</span> <span class="text-info">href=</span><span class="text-accent7">"https://california.azureedge.net/cdt/statetemplate/5.5.2/css/colorscheme-oceanside.css"</span><span class="text-accent-p2">&gt;</span>
         
         <span class="text-muted">&lt;!-- Required JS --&gt;</span>
-        <span class="text-accent-p2">&lt;script </span><span class="text-info">src=</span><span class="text-accent7">"https://california.azureedge.net/cdt/statetemplate/5.5.2/js/libs/modernizr-3.6.0.min.js"</span><span class="text-accent-p2">&gt;&lt;/script&gt;</span>
         <span class="text-accent-p2">&lt;script </span><span class="text-info">src=</span><span class="text-accent7">"https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"</span> <span class="text-info">type=</span><span class="text-accent7">"text/javascript"</span><span class="text-accent-p2">&gt;&lt;/script&gt;</span>
         <span class="text-accent-p2">&lt;script </span><span class="text-info">src=</span><span class="text-accent7">"https://code.jquery.com/jquery-migrate-3.0.1.min.js"</span> <span class="text-info">type=</span><span class="text-accent7">"text/javascript"</span><span class="text-accent-p2">&gt;&lt;/script&gt;</span>
     <span class="text-accent-p2">&lt;/head&gt;</span>
