--- a/sample/modules/nav-megamenu-orig.html
+++ b/sample/modules/nav-megamenu-orig.html
@@ -206,7 +206,7 @@ Options are: megadropdown dropdown singlelevel
             </div>
         </li>
         <li class="nav-item">
-            <a href="http://webtools.ca.gov/" target="_blank" class="first-level-link"><span class="ca-gov-icon-state" aria-hidden="true"></span>Webtools</a>
+            <a href="http://webstandards.ca.gov/" target="_blank" class="first-level-link"><span class="ca-gov-icon-state" aria-hidden="true"></span>WebStandards</a>
             <span class="mobile-control toggle-sub-nav closed"><span class="ca-gov-icon-menu-toggle-open" aria-hidden="true"></span><span class="sr-only">Sub Menu Toggle</span></span>
             <div class="sub-nav with-image-sm-left">
                 <ul class="second-level-nav">
