--- a/sample/navigation-megamenu-accessible2.html
+++ b/sample/navigation-megamenu-accessible2.html
@@ -357,7 +357,7 @@ Based on Twitter Bootstrap
                             <a href="/" class="first-level-link"><span class="ca-gov-icon-graduate" aria-hidden="true"></span>Instructions</a>
                         </li>
                         <li class="nav-item">
-                            <a href="/" class="first-level-link"><span class="ca-gov-icon-state" aria-hidden="true"></span>Webtools</a>
+                            <a href="/" class="first-level-link"><span class="ca-gov-icon-state" aria-hidden="true"></span>WebStandards</a>
                         </li>
 
                         <li class="nav-item">
